video6/kubernetes/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-app
spec:
  selector:
    app.kubernetes.io/name: golang-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1323
