video6/kubernetes/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app
spec:
  rules:
  - host: "golang-app.dev"
    http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: golang-app
            port:
              number: 80
